--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@significa/eslint-config-significa": "^1.0.2",
     "eslint-config-react-app": "^3.0.8",
+    "modern-normalize": "^0.5.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8"
