--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@significa/eslint-config-significa": "^1.0.2",
     "eslint-config-react-app": "^3.0.8",
     "modern-normalize": "^0.5.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8"
