--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@significa/eslint-config-significa": "^1.0.2",
     "eslint-config-react-app": "^3.0.8",
+    "lodash": "^4.17.11",
     "modern-normalize": "^0.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
