--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.11",
     "modern-normalize": "^0.5.0",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
